--- a/index.html
+++ b/index.html
@@ -215,16 +215,16 @@
               <div class="album__image" data-image-src="./static/images/16.jpg"
                 style="padding-bottom:71.44444444444444%;">
                 <div class="spin"></div><img data-echo="./static/images/16.jpg"><img
-                  data-echo="./static/images/17.jpg"><img data-echo="./static/images/18.jpg"><img
-                  data-echo="./static/images/19.jpg">
+                  data-echo="./static/images/17.jpg"><img data-echo="./static/images/19.jpg"><img
+                  data-echo="./static/images/18.jpg">
               </div>
               <figcaption style="color:undefined;">
                 <span style="color: #4d4d4d;">左上－</span>2020-11-10
                 廣福邨，由於該邨有確診個案，大批市民早上於採樣亭前排隊輪候進行檢測，人與人之間保持社交距離。<br>
                 <span style="color: #4d4d4d;">右上－</span>2020-10-21 沙嶺，墳場附近正動工的地盤，背景是中國深圳市。<br>
-                <span style="color: #4d4d4d;">左下－</span>2020-02-01
-                旺角，農曆新年，香港第一波疫情期間，年輕人舞獅慶祝商店開幕。<br>
-                <span style="color: #4d4d4d;">右下－</span>2020-09-03 圓方，溜冰場因疫情停止開放，工作人員在場內溜冰。</figcaption>
+                <span style="color: #4d4d4d;">左下－</span>2020-09-03 圓方，溜冰場因疫情停止開放，工作人員在場內溜冰。<br>
+                <span style="color: #4d4d4d;">右下－</span>2020-02-01
+                旺角，農曆新年，香港第一波疫情期間，年輕人舞獅慶祝商店開幕。</figcaption>
             </figure>
           </li>
           <li class="album__item album__normal">
